--- a/style.css
+++ b/style.css
@@ -53,77 +53,11 @@ body{
     transform: scale(1.2);
 }
 
-.action{
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
 
-.action li{
-    position: relative;
-    list-style: none;
-    width: 40px;
-    height: 40px;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 4px;
-    cursor: pointer;
-    transition: transform 0.5s;
-    transform: translateX(60px);
-}
-
-.action li:nth-child(2){
-    transition-delay: 0.15s;
-}
-
-.action li:nth-child(3){
-    transition-delay: 0.3s;
-}
-
-.container .card:hover .action li{
+.container .card:hover {
     transform: translateX(0px); 
 }
 
-.action li:hover{
-    background: #ff2020;
-    color: #fff;
-}
-
-.action li span{
-    position: absolute;
-    right: 5px;
-    top: 40%;
-    transform: translate(-50%) translateX(-20px);
-    white-space: nowrap;
-    padding: 4px 6px;
-    background: #fff;
-    font-weight: 500;
-    font-size: 15px;
-    border-radius: 4px;
-    pointer-events: none;
-    opacity: 0;
-    transition: 0.5s;
-}
-
-
-
-.action li:hover span{
-    transform: translate(-50%) translateX(0px); 
-    opacity: 1;  
-}
-
-.action li span::before{
-    content: '';
-    position: absolute;
-    top: 50%;
-    right: -4px;
-    width: 8%;
-    height: 8%;
-    background: #fff;
-    transform: translateY(-50%) rotate(45deg);
-}
 
 .container .card .content{
     padding: 10px;
@@ -137,6 +71,8 @@ body{
     text-shadow: 2px 2px 5px red;
     font-style: italic;
 }
+
+
 
 .container .card .content .price_rating{
     display: flex;
@@ -180,4 +116,16 @@ h1{
     text-align: center;
     text-shadow: 2px 2px 5px red;
     font-style: italic;
+    margin-left: 90px;
+    margin-top: 25px;
+    
+}
+
+h4{
+    color: black;
+    text-shadow: 2px 2px 5px red;
+    font-style: italic;
+    font-size: 20px;
+    text-align: right;
+    margin-top: 35px;
 }
