--- a/style.css
+++ b/style.css
@@ -129,3 +129,20 @@ h4{
     text-align: right;
     margin-top: 35px;
 }
+
+button{
+    height: 30px;
+    width: 40px;
+    margin-bottom: 20px;    
+    border-radius: 10px;
+    margin-top: 5%;
+    margin-right: 2%;
+    text-align: center;
+    
+}
+
+
+#bird{
+    margin-left: 42%;
+}
+
